--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "core-js": "^3.29.1",
     "datejs": "^1.0.0-rc3",
+    "echarts": "^5.4.2",
     "element-plus": "^2.3.0",
     "js-md5": "^0.7.3",
     "vue": "^3.0.0",
